Why not just fix all this crap too while I'm here